sumo/tests/sumo/output/e1/errors/id_missing/errors.sumo
Error: Attribute 'id' is missing in definition of a detector.
Quitting (on error).
